test/tests/errors/error-class-cannot-access-private3.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        var x: int = 1;
    }

    const a: T = new T();
    output a.x;
}